TAG: littriageload-6-0-16-2
TAG: littriageload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: littriageload-6-0-15-5
DATE: 06/18/2020
STAFF: lec
TR13321/ltlo: NLM refresh folder adding an extra lit record

TAG: littriageload-6-0-15-4
DATE: 03/10/2020
STAFF: lec
PdfParser.py
TR13279/JCI & REP (Reproduction)

TAG: littriageload-6-0-15-3
TAG: littriageload-6-0-15-2
DATE: 02/05/2020
STAFF: lec 
CHANGES:
TR12871/ltlo: Erratum/corrections/retractions
TR13224/ltlo: PNAS doi extraction issue
TR13208/ltlo: blood journal doi extraction is truncated

TAG: littriageload-6-0-15-1
DATE: 12/02/2019
STAFF: lec 
CHANGES: TR13007/RNA Sequence project/add bib_refs autosequence

TAG: littriageload-6-0-14-10
TAG: littriageload-6-0-14-9
TAG: littriageload-6-0-14-8
TAG: littriageload-6-0-14-7
TAG: littriageload-6-0-14-6
DATE: 09/04/2019
STAFF: lec 
TR13152/fix setSupplemental()
check for extractedText = None

TAG: littriageload-6-0-14-5
DATE: 08/20/2019
STAFF: lec 
TR13152/fix setSupplemental()

TAG: littriageload-6-0-14-4
TAG: littriageload-6-0-14-3
TAG: littriageload-6-0-14-2
TAG: littriageload-6-0-14-1
DATE: 04/03/2019, 05/06/2018
STAFF: lec 
TR12963/teleuse-to-mgd_java_api
- add bib_workflow_tag_seq reset

TAG: littriageload-6-0-12-17
DATE: 03/04/2019
STAFF: lec
CHANGES: TR13046/supplement/add new term to setSupplmental

TAG: littriageload-6-0-12-16
TAG: littriageload-6-0-12-15
DATE: 10/11/2018, 10/17/2018
STAFF: lec
CHANGES: TR12958/add littriage_discard folder

TAG: littriageload-6-0-12-14
TAG: littriageload-6-0-12-13
TAG: littriageload-6-0-12-12
DATE: 08/27/2018
STAFF: lec
CHANGES: TR12929
1) input directory archived fro 14 days
2) added Mismatch counts to top of curator log

TAG: littriageload-6-0-12-11
DATE: 07/30/2018
STAFF: lec
CHANGES: 
1) TR12844/check for duplicate PDF names in input folder

TAG: littriageload-6-0-12-10
DATE: 06/20/2018
STAFF: lec
CHANGES: 
1) TR12844/ignore duplicates in processPDFs()