@@ -1,3 +1,8 @@
+TAG: littriageload-6-0-16-3
+DATE: 08/24/2020
+STAFF: jak
+improve stderr capture from PdfParser during text extraction
+
 TAG: littriageload-6-0-16-2
 TAG: littriageload-6-0-16-1
 DATE: 08/21/2020
